--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,19 @@ erl_crash.dump
 # secrets files as long as you replace their contents by environment
 # variables.
 /config/*.secret.exs
+
+
+.DS_Store
+.directory
+.fuse_hidden
+.fuse_hidden*
+*.sublime-project
+*.sublime-workspace
+**/.sass-cache/*
+.sass-cache
+.sass-cache/*
+node_modules/*
+.npm-debug.log
+.npm-debug*
+Thumbs.db
+*.zip
